--- a/libs/trpc-server/package.json
+++ b/libs/trpc-server/package.json
@@ -1,15 +1,15 @@
 {
-    "name": "@monorepo/db",
+    "name": "@monorepo/trpc-server",
     "module": "index.ts",
     "type": "module",
     "devDependencies": {
-        "@types/bun": "latest",
-        "prisma": "^5.17.0"
+        "@types/bun": "latest"
     },
     "peerDependencies": {
         "typescript": "^5.0.0"
     },
     "dependencies": {
-        "@prisma/client": "^5.17.0"
+        "@trpc/server": "^10.45.2",
+        "@monorepo/db": "workspace:^"
     }
 }
