--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,8 +3,8 @@
     "module": "index.ts",
     "type": "module",
     "scripts": {
-        "start": "bun run ./build/index.js",
-        "dev": "bun --watch ./src/index.ts",
+        "start": "bun run build/index.js",
+        "dev": "bun --watch src/index.ts",
         "build": "bun build --target=bun ./src/index.ts --outdir ./build"
     },
     "devDependencies": {
